Fix some spacing on item page

--- a/angular-frontend/src/app/item/item.component.scss
+++ b/angular-frontend/src/app/item/item.component.scss
@@ -41,3 +41,12 @@ h3 {
 #body {
     margin-bottom: 0px;
 }
+
+strong {
+    font-size: 1.1rem;
+}
+
+.padding-0 {
+    padding-top: 0% !important;
+    padding-bottom: 0% !important;
+}
